# hopus

./: .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  evaluation.py  index.html  models.py  predictions_map.html  preprocessing.py  pyproject.toml  showcase.ipynb  temp_map.html
.github/workflows/: lint.yml
config/: column_to_group_map.csv  partial_column_to_group_map.csv
data/: CSUSHPINSA.csv
demo/: demo.ipynb
hopus/: __init__.py  evaluation.py  models.py
hopus/config/: column_to_group_map.csv
hopus/demo/: __init__.py  boosted_trees.json  boosted_trees.model  data_v1.json  linear_regression.npz  predictions.csv  test_data.csv  trained_baseline.csv  training_data.csv
hopus/demo_data/: CSUSHPINSA.csv
hopus/preprocessing/: home_price_index.py  property_listings.py
preprocessing/: __init__.py  home_price_index.py  property_listings.py
