[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopus"
version = "0.1.0"
description = "HOusing Pricing UtilitieS - utilities for prediction of real estate listing sales prices"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
]

[tool.setuptools.packages.find]
include = ["hopus*"]

[tool.setuptools.package-data]
hopus = [
    "config/*.csv",
    "demo_data/*.csv",
]
